feat: Make certain properties optional
- Many incoming messages are "incomplete" and are discarded now
- Therefore, make all properties except aircraft and position optional
- Updated frontend (+ formatting)
- Updated openapi.yml
